html und css hergestelllt

--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="exe.css">
+    <title>micropage_travel_tales</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Travel Tales</h1>
+        <p>Reisetagebuch Projekt</p>
+    </header>
+
+    <!-- Nueva sección de navegación -->
+    <nav>
+        <ul>
+            <li><a href="#konzeption">Konzeption</a></li>
+            <li><a href="#prototyp">Prototyp</a></li>
+            <li><a href="#desing">Design</a></li>
+        </ul>
+    </nav>
+    <section id="video">
+        <!-- Sección de video -->
+        <div class="video-container">
+            <video controls>
+                <source src="/Videos/trailer.mp4" type="video/mp4">
+            </video>
+            <img src="tu-imagen.jpg" alt="Tu Imagen">
+            <h2>Projektbeschreibung</h2>
+            <p>Beim Projekt „Travel Tales“ haben wir einen Prototypen für eine App entwickelt, die als Reisetagebuch fungiert. 
+                Sie unterscheidet sich von ähnlichen Apps dadurch, dass sie viele Funktionen anderer Apps in einer vereint. 
+                Sie gibt dem Nutzer die Möglichkeit, Bilder, Musik, Rezepte und Kontakte zu einem Eintrag abzuspeichern. 
+                Außerdem kann man besuchte Orte in einer von Google-Maps generierten 3D-Karte ansehen und mithilfe der gemachten Fotos 
+                und den anderen Elementen die Erinnerung an den Urlaub wieder auffrischen. Die App richtet sich an junge Reisende, 
+                die sich auch viele Jahre später noch bestens an die schönste Zeit ihres Lebens erinnern wollen.</p>
+
+        </div>
+    </section>
+
+    <section id="featured">
+        <!-- Sección destacada con alguna imagen o contenido principal -->
+        <h2>Destinos Destacados</h2>
+        <div class="destination-card">
+            <img src="destino1.jpg" alt="Destino 1">
+            <h3>P</h3>
+            <p>Beim Projekt.</p>
+        </div>
+        <!-- Agrega más destinos según sea necesario -->
+    </section>
+
+    <section id="how-it-works">
+        <!-- Sección que explica cómo funciona la aplicación -->
+        <h2>¿Cómo Funciona?</h2>
+        <p>Registra tus experiencias de viaje, comparte fotos y conecta con otros viajeros.</p>
+    </section>
+
+    <footer>
+        <!-- Pie de página con información adicional o enlaces importantes -->
+        <p>&copy; 2024 Travel tales: Julia Mamani - Luis Riesle.</p>
+    </footer>
 </body>
 </html>
