--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <video controls>
                 <source src="/Videos/trailer.mp4" type="video/mp4">
             </video>
-            <img src="tu-imagen.jpg" alt="Tu Imagen">
+            <img src="/Bilder/line_fliege.jpg" alt="Tu Imagen">
             <h2>Projektbeschreibung</h2>
             <p>Beim Projekt „Travel Tales“ haben wir einen Prototypen für eine App entwickelt, die als Reisetagebuch fungiert. 
                 Sie unterscheidet sich von ähnlichen Apps dadurch, dass sie viele Funktionen anderer Apps in einer vereint. 
