Startseite fast fertig ohne Navegation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="exe.css">
+    <script src="myscript.js"></script>
     <title>micropage_travel_tales</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <p>Reisetagebuch Projekt</p>
     </header>
 
-    <!-- Nueva sección de navegación -->
+    <!-- Navegation -->
     <nav>
         <ul>
             <li><a href="#konzeption">Konzeption</a></li>
@@ -20,39 +21,63 @@
             <li><a href="#desing">Design</a></li>
         </ul>
     </nav>
+    <!-- Navegation Konzeption section -->
+    <section id="konzeption">
+        <!-- Contenido de la sección... -->
+    </section>
+
+    <!-- Navegation Prototyp section -->
+    <section id="prototyp">
+        <!-- Contenido de la sección... -->
+    </section>
+
+    <!-- Navegation Design section -->
+    <section id="design">
+        <!-- Contenido de la sección... -->
+    </section>
+
+    <!-- Video section / Haupt-Information -->
     <section id="video">
-        <!-- Sección de video -->
         <div class="video-container">
-            <video controls>
-                <source src="/Videos/trailer.mp4" type="video/mp4">
+            <video autoplay playsinline controls>
+                <source src="../travel_tales/Videos/trailer.mp4" type="video/mp4">
             </video>
-            <img src="/Bilder/line_fliege.jpg" alt="Tu Imagen">
+            <img src="../travel_tales/Bilder/paper_airplane.jpg" alt="Airplane">
+            <br>
             <h2>Projektbeschreibung</h2>
             <p>Beim Projekt „Travel Tales“ haben wir einen Prototypen für eine App entwickelt, die als Reisetagebuch fungiert. 
                 Sie unterscheidet sich von ähnlichen Apps dadurch, dass sie viele Funktionen anderer Apps in einer vereint. 
                 Sie gibt dem Nutzer die Möglichkeit, Bilder, Musik, Rezepte und Kontakte zu einem Eintrag abzuspeichern. 
                 Außerdem kann man besuchte Orte in einer von Google-Maps generierten 3D-Karte ansehen und mithilfe der gemachten Fotos 
                 und den anderen Elementen die Erinnerung an den Urlaub wieder auffrischen. Die App richtet sich an junge Reisende, 
-                die sich auch viele Jahre später noch bestens an die schönste Zeit ihres Lebens erinnern wollen.</p>
-
+                die sich auch viele Jahre später noch bestens an die schönste Zeit ihres Lebens erinnern wollen.
+            </p>
         </div>
     </section>
 
-    <section id="featured">
+    <!-- Werk section-->
+    <section id="werk">
         <!-- Sección destacada con alguna imagen o contenido principal -->
-        <h2>Destinos Destacados</h2>
-        <div class="destination-card">
-            <img src="destino1.jpg" alt="Destino 1">
-            <h3>P</h3>
-            <p>Beim Projekt.</p>
+        <!--<h2>Destinos Destacados</h2> -->
+        <div class="werk_graphic">
+            <video controls>
+                <source src="../travel_tales/Videos/login video.mp4" alt="Login">
+            </video>
+            <img src="../travel_tales/Bilder/Tagebuch.jpg" alt="Tagebuch">
+            <video controls>
+                <source src="../travel_tales/Videos/3dgif.mp4" alt="3D">
+            </video>
+
         </div>
-        <!-- Agrega más destinos según sea necesario -->
     </section>
 
-    <section id="how-it-works">
+
+    <section id="Inspiration">
         <!-- Sección que explica cómo funciona la aplicación -->
-        <h2>¿Cómo Funciona?</h2>
-        <p>Registra tus experiencias de viaje, comparte fotos y conecta con otros viajeros.</p>
+        <h2>Inspiration</h2>
+        <p>Gestaltung im Stil eines analogen Reisetagebuch und Instagram Stories. So kann der Nutzer selbst gestalten.</p>
+        <br>
+        <img src="../travel_tales/Bilder/Inspiration.jpg" alt="Inspiration">
     </section>
 
     <footer>
