--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <div class="text">
                     <h3>Visualisierung der Erinnerung</h3>
                     <p>
-                        Wenn man längere Zeit in verschiedenen Länder reist, hegt man oft den Wunsch, die Erinnerung an die Abenteuert zu bewahren 
-                        und die Augenblicke sowie die damit verbundenen Emotionen erneut erleben zu können. Aus diesem Grund haben wir die Entwicklung dieser Reisetagebuch-App,
+                        Wenn man längere Zeit in verschiedenen Länder reist, hegt man oft den Wunsch, die Erinnerung an die Abenteuer zu bewahren 
+                        und die Augenblicke sowie die damit verbundenen Emotionen erneut erleben zu können. Aus diesem Grund entwickeln wir eine Reisetagebuch-App,
                         die dazu dient, die Erinnerung an Reisen lebendig zu erhalten und die einzigartigen Momente festzuhalten. 
                         <br>
                         <br>
@@ -129,10 +129,10 @@
             <div class="description-image-wireframes">
                 <a href="https://www.figma.com/file/JJwLvjYIlzX7qL61zIRfuH/Wireframe?type=design&node-id=0-1&mode=design" target="_blank">
                     <div class="text">
-                        <h3>Wireframes</h3>
+                        <h3>Wireframe</h3>
                     </a>
                         <p>
-                        Unser Projekt hat mehrere Stufen der Entwicklung durchlaufen. Bei der Prototypphase erstellten wir zuerst ein Wireframes. 
+                        Unser Projekt hat mehrere Stufen der Entwicklung durchlaufen. In der Prototypphase erstellten wir zuerst ein Wireframe. 
                         Erste Wireframes und Scribbles haben wir mit Blatt und Papier erstellt, später ein richtiges Wireframe in Figma.
                         <br>
                         <br>
@@ -157,11 +157,11 @@
             <div class="image-link-desing">
                 <h2>Design</h2>
                 <p> Aus dem Wireframe haben wir in Figma einen Clickdummy gebaut, der auch das finale Design hat. 
-                    Der finale Prototype mit Funktionen wie dem Erstellen eines Accounts und abspeichern von Tagebucheinträgen 
-                    wurde leider aus Zeitgründen nur teilweise fertig. Dafür haben wir die Anwendung mit Thunkable gemacht.</p>
+                    Der finale Prototyp mit Funktionen wie dem Erstellen eines Accounts und Abspeichern von Tagebucheinträgen 
+                    wurde leider aus Zeitgründen nur teilweise fertig. Für den Prototypen nutzten wir die Plattform Thunkable. .</p>
                 <div class="image-link">
                     <p>
-                        <a href="otro_enlace_relacionado_aqui" target="_blank">Figma</a>
+                        <a href="https://www.figma.com/proto/JJwLvjYIlzX7qL61zIRfuH/Wireframe?type=design&node-id=78-4&t=9tVUiMdT5Taq53T6-1&scaling=min-zoom&page-id=78%3A2&starting-point-node-id=78%3A4&mode=design" target="_blank">Figma</a>
                     </p>
                     <a href="https://www.figma.com/proto/JJwLvjYIlzX7qL61zIRfuH/Wireframe?type=design&node-id=78-4&t=9tVUiMdT5Taq53T6-1&scaling=min-zoom&page-id=78%3A2&starting-point-node-id=78%3A4&mode=design" target="_blank">
                         <img src="../travel_tales/Bilder/Figma.jpg" alt="Figma">
@@ -169,7 +169,7 @@
                 </div>
                 <div class="image-link">
                     <p>
-                        <a href="enlace_relacionado_aqui" target="_blank">Thunkable</a>
+                        <a href="https://x.thunkable.com/projectPage/65be174e105ea1d0424db936" target="_blank">Thunkable</a>
                     </p>
                     <a href="https://x.thunkable.com/projectPage/65be174e105ea1d0424db936" target="_blank">
                         <img src="../travel_tales/Bilder/Thunkable.jpg" alt="Thunkable">
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="title-image-medium">
-                <h3>Technische Setup</h3>
+                <h3>Technisches Setup</h3>
                 <div class="text">
                     <p>
                         Für die Arbeit an unserem Projekt haben wir verschiedenste Software benutzt. 
@@ -194,7 +194,7 @@
 
     <footer>
         <!-- Pie de página con información adicional o enlaces importantes -->
-        <p>&copy; 2024 Travel tales: Julia Mamani - Luis Riesle.</p>
+        <p>&copy; 2024 Travel Tales: Julia Mamani - Luis Riesle.</p>
     </footer>
 </body>
 </html>
